--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello there, awesome person!
+<html>
+      <body>
+              I am inside the body tag and I can structure my content. thank you html for these tags.
+      </body>
+</html>
