--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<html>
-      <body>
-              I am inside the body tag and I can structure my content. thank you html for these tags.
-      </body>
+html>
+  <body>
+    Hello there, awesome person! 
+  </body>
 </html>
