--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ html>
 </head>
   <body>
       <h1> I am header 1 and I am the eldest among six</h1>
-    Hello there, awesome person! 
+<img src="https://avatars.githubusercontent.com/u/41530645?v=4">
+
   </body>
 </html>
