--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@ html>
   <body>
       <h1> I am header 1 and I am the eldest among six</h1>
 <img src="https://avatars.githubusercontent.com/u/41530645?v=4">
-
+      <ul>
+          <li>www.linkedIN.com</li>
+          <li>youtbe</li>
+          <li>reddit</li>
+          <li>github</li>
+      </ul>
   </body>
 </html>
