--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-html>
+<html>
 <head>
     <title>
     my awsome web page
@@ -8,10 +8,9 @@ html>
       <h1> I am header 1 and I am the eldest among six</h1>
 <img src="https://avatars.githubusercontent.com/u/41530645?v=4">
       <ul>
-          <li>www.linkedIN.com</li>
-          <li>youtbe</li>
-          <li>reddit</li>
-          <li>github</li>
+          <li><a  href="https://www.linkedin.com/">www.linkedIN.com<</a>/li>
+          <li><a href="https://www.youtube.com/">youtbe<a/></li>
+          <li><a href="https://github.com/">github<a/></li>
       </ul>
   </body>
 </html>
