--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <html>
 <head>
-    <title>
+    <title>Sparrow's Nest</title>
     <link rel="stylesheet" href="style.css">
-    my awsome web page
-    </title>
 </head>
   <body>
-      <h1> I am header 1 and I am the eldest among six</h1>
-<img src="https://avatars.githubusercontent.com/u/41530645?v=4">
+      <h1>Shayan Ahmed Khan</h1>
+      <img src="https://avatars.githubusercontent.com/u/41530645?v=4">
+      <section>
+        <p>
+          I have created this page to showchase my html skills and also to start building a portfolio. And deliver my Message to the world.
+          <b>How do I wish to use this webpage?</b>
+          I will use this page to discover and analyse my family tree and look how my generic can help me find the right habits for me to master.
+          I just have to find the habits that comes to me easily. And find out the things that I find easy which are not easy for my fellow mates 
+          and friends and people who I know.
+         </p>
+           <div>
+              My name is Shayan Ahmed Khan. I am the eldest son of my family,son of Munin Khan(grandson of Mustakeem khan s/o Sardar Khan).
+              My great-grandfather was a Wrestler around 1962 and the this title was awarded to him by the british government and he was also 
+              he was in the Indian Imperial Police and was posted as the Assstand Supreitendent of police. 
+              My grandfather was also in Indian Police.
+              And my Father is a advocate.
+              <br>
+               My Mother Roquiyya Perveen (daughter of Sheikh Jahur ,grand-daughter of Sheikh Peer Mohammad).
+               My Maternal great grandfather was a Landowner or modern day Investor.
+               And Maternal grandfather was a Businessman.
+               <br>
+               Now I need to read this and find all the habits and skills and insight from these information to tap into my genetics and find 
+               out Who I am and what my purpose in this life and how I can gift humanity with my talent and help and wake on the path of mastery 
+               of my that skill that will earn me my place amongs the gods and among all the elite humans.
+          </div>
+      </section>
       <ul>
-          <li><a  href="https://www.linkedin.com/">www.linkedIN.com</a></li>
+          <h2>List of some of my most used and favorite websites</h2>
+          <li><a href="https://www.linkedin.com/">www.linkedIN.com</a></li>
           <li><a href="https://www.youtube.com/">youtbe<a/></li>
           <li><a href="https://github.com/">github<a/></li>
       </ul>
